--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
 
 /* Import declaration to use Google Fonts - check https://fonts.google.com/ for details */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 /* Styles for the body */
 
@@ -14,7 +17,7 @@ body {
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
 .resume-header {
-    background-color: #e0f0ff;
+    background-color: #183F88;
 }
 
 .resume-main {
@@ -22,7 +25,7 @@ body {
 }
 
 .resume-aside {
-	background-color: #fff0e0;
+	background-color: #9AACD2;
 }
 
 /* Styles for lists in the document */
@@ -33,15 +36,54 @@ body {
 	display: inline-block;
 	width: 1em;
 	margin-left: -1em;
+	color: #183F88;
 }
 
 .biography-details li::before {
-	color: #EE7623;
+	color: #183F88;
 }
 
 .biography-details li, .skill-list li {
 	padding-left: 1em;
 }
+
+
+
+.playfair-display {	
+  text-align: left;	
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+
+.poppins-thin {	
+  text-align: left;	
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+
+
+.blue-text {
+  color: #183F88;	
+}
+
+.white-text {
+  color: #FFFFFF;	
+}
+
+.blue-boarder {
+  background-color: #183F88;	
+}
+
+.blue-line {
+  border-style: solid;
+	border-width: 2px;
+  border-color: #183F88;	
+}
+
 
 /* Styles for contact icons */
 
